--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <main>
       <div class="caja_texto">
         <textarea
-          placeholder="Ingrese el texto aqui"
+          placeholder="Ingrese el texto aquí"
           class="espacio_texto"
         ></textarea>
       </div>
